# jamin

./:  .bazelrc  .gitignore  MODULE.bazel  README.md  go.mod  go.sum
services/mqtt/: README.md
services/mqtt/cmd/: main.go  mq_client.go
services/mqtt/internal/adapter/: adapter.go  docker_driver.go  podman_driver.go
services/mqtt/internal/repo/: pg.go  repo.go  tsdb.go
services/mqtt/internal/repo/migrations/: 20240226153000_create_telemetries_table.go  20240227090000_create_construction_table.go  20240227140000_create_device_template_table.go  20240227143000_create_device_table.go  20240227153000_alter_device_table.go  20240227163000_create_construction_runner_table.go  all.go
services/mqtt/internal/service/: construction.go
services/mqtt/internal/usecase/: construction.go  device.go
services/mqtt_alarm/: main.go
services/mqtt_client/: Dockerfile  main.go
services/mqtt_client/migrations/: 20240226153000_create_telemetries_table.go  all.go
services/mqtt_data/: main.go
services/storage/cmd/: server.go
